[package]
name = "short-links"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
redis = { version = "0.26.1", features = ["tokio-comp"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
rand = "0.9.0-alpha.2"
tracing = "0.1.40"
serde_json = "1.0.128"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
